[package]
name = "macros"
version = "0.1.0"
authors = ["Ethan <liu.zy.ethan@gmail.com>"]
edition = "2021"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
futures = "0.3.28"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
