[package]
name = "macros"
version = "0.1.0"
authors = ["Ethan <liu.zy.ethan@gmail.com>"]
edition = "2021"
license = "MIT or Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.91", features = ["extra-traits"] }


[dev-dependencies]
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
